fixed logo img size on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -11456,6 +11456,10 @@ header.masthead .masthead-heading {
 }
 
 @media (max-width: 768px) {
+  header.masthead img {
+    padding-bottom: 5rem;
+    width: 80vw;
+  }
   header.masthead .masthead-heading {
     font-size: 2.5rem;
     font-weight: 700;
